# timeScaleNetwork

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  setup.py
examples/: README.md  simple.py  simplest.py
examples/trainLayer/: generateData.py  trainLayer.py
examples/trainNetwork/: fcn_plotEmbedding.py  generateData.py  trainNetwork.py  train_network.py
timeScaleNetwork/: network.py  perceptronN.py  timescaleF.py  timescaleL.py  timescaleN.py  tnoise.py
timeScaleNetwork.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
